--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,7 @@
+@import '../scss/_variables.scss';
+@import '../scss/_mixins.scss';
 #main-container{
-  padding: 0 50px;
+  padding: 50px 300px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -7,7 +9,14 @@
 
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
+  @include media-breakpoint-down(lg){
+    padding: 50px 100px;
 
+  }
+  @include media-breakpoint-down(md){
+    padding: 20px;
+
+  }
 }
 *{
   padding: 0;
@@ -15,13 +24,21 @@
 }
 .headerContainer{
   margin: 50px;
+  @include media-breakpoint-down(md){
+    margin: 25px;
+
+  }
   h2{
     font-family: Roboto, sans-serif;
     font-weight: 700;
     text-align: center;
-    padding: 20px 20px 0;
     font-size: 70px;
     margin: 0;
+    @include media-breakpoint-down(md){
+      font-size: 40px;
+      padding: 0;
+
+    }
   }
   h4{
     font-family: Roboto, sans-serif;
@@ -30,6 +47,10 @@
     padding: 0 20px 20px;
     font-size: 40px;
     margin: 0;
+    @include media-breakpoint-down(md){
+      font-size: 30px;
+
+    }
   }
 }
 
@@ -40,13 +61,13 @@
   -webkit-box-shadow: 10px 10px 36px -12px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 36px -12px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 36px -12px rgba(0,0,0,0.75);
+  width: 100%;
   #table-container{
     flex-grow: 1;
     justify-content: center;
     display: flex;
     //padding: 0 50px;
-    width: 1000px;
-
+    width: 100%;
     table{
       background-color: white;
       width: 100%;
